--- a/css/style.css
+++ b/css/style.css
@@ -15,11 +15,37 @@ body {
     font-family: "Open Sans", sans-serif;
 }
 
-.list {
-    list-style: none;
+p, h1, h2, h3, h4, h5, h6 {
+    margin: 0;
 }
 
-.link {
+ul{
+    margin: 0;
+    padding: 0;
+}
+
+button {
+    cursor: pointer;
+}
+
+img{
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
+.container{
+    width: 1200px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin: 0 auto;
+}
+
+.list{
+    list-style-type: none;
+}
+
+.link{
     text-decoration: none;
 }
 
@@ -36,10 +62,74 @@ body {
     margin: -1px;
 }
 
+.btn{
+    font-family: inherit;
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 1.33;
+    letter-spacing: 0.09em;
+    text-transform: uppercase;
+    box-sizing: border-box;
+    border: var(--accent-color) 1px solid;
+    border-radius: 25px;
+    background-color: transparent;
+    min-width: 160px;
+    height: 40px;
+}
+
+.pre-title{
+    font-weight: 600;
+    font-size: 11px;
+    line-height: 1.36;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
+}
+
+.section-title{
+    font-family: Raleway;
+    font-weight: 700;
+    font-size: 42px;
+    line-height: 1.17;
+    letter-spacing: 0.05em;
+}
+
+.after-title{
+    font-size: 18px;
+    line-height: 1.67;
+    letter-spacing: 0.02em;
+}
+
 /* -------------------HEADER---------------------- */
 
 .header {
     background-color: var(--fourth-text-color);
+    padding: 32px 0;
+}
+
+.header-container{
+    display: flex;
+    align-items: center;
+}
+
+.header-logo{
+    margin-right: 70px;
+}
+
+.header-navigation{
+    display: flex;
+    align-items: center;
+}
+
+.header-list{
+    display: flex;
+}
+
+.header-item{
+    margin-right: 40px;
+}
+
+.header-item:last-child {
+    margin-right: 0;
 }
 
 .header-link {
@@ -55,6 +145,10 @@ body {
     color: var(--accent-color);
 }
 
+.header-connect{
+    margin-left: auto;
+}
+
 .header-tel {
     font-weight: 600;
     font-size: 12px;
@@ -64,16 +158,20 @@ body {
 }
 
 .header-btn {
-    font-family: inherit;
-    font-weight: 600;
-    font-size: 12px;
-    line-height: 1.33;
-    letter-spacing: 0.09em;
-    text-transform: uppercase;
     color: var(--first-button-color);
+    margin-left: 40px;
+
 }
 
 /* -------------------HERO---------------------- */
+.hero-container{
+    display: flex;
+}
+
+.hero-list{
+    width: 93px;
+}
+
 .hero-link {
     font-weight: 600;
     font-size: 11px;
@@ -89,15 +187,15 @@ body {
 
 .hero-right {
     background-color: var(--fourth-text-color);
+    flex-grow: 1;
+    padding-top: 272px;
+    padding-bottom: 206px;
+    padding-left: 96px;
 }
 
 .hero-pre-title {
-    font-weight: 600;
-    font-size: 11px;
-    line-height: 1.36;
-    letter-spacing: 0.1em;
-    text-transform: uppercase;
     color: var(--first-text-color);
+    margin-bottom: 20px;
 }
 
 .hero-title {
@@ -106,43 +204,48 @@ body {
     font-size: 72px;
     line-height: 1.18;
     letter-spacing: 0.05em;
-
     color: var(--main-title-color);
+    margin-bottom: 20px;
 }
 
 .hero-after-title {
-    font-size: 18px;
-    line-height: 1.67;
-    letter-spacing: 0.02em;
-
+    max-width: 400px;
     color: var(--second-text-color);
 }
 
 /* -------------------ABOUT---------------------- */
+
+.about{
+    padding-top: 139px;
+    padding-bottom: 121px;
+}
+
+.about-container{
+    display: flex;
+}
+
+.about-list{
+    display: flex;
+    margin-right: 64px;
+}
+
+.about-item:not(:last-child){
+    margin-right: 30px;
+}
+
 .about-pre-title {
-    font-weight: 600;
-    font-size: 11px;
-    line-height: 1.36;
-    letter-spacing: 0.1em;
-    text-transform: uppercase;
     color: var(--third-text-color);
+    margin-bottom: 20px;
 }
 
 .about-title {
-    font-family: Raleway;
-    font-weight: 700;
-    font-size: 42px;
-    line-height: 1.17;
-    letter-spacing: 0.05em;
-
+    margin-bottom: 20px;
     color: var(--second-title-color);
 }
 
 .about-after-title {
-    font-size: 18px;
-    line-height: 1.67;
-    letter-spacing: 0.02em;
     color: var(--fourth-text-color);
+    margin-bottom: 20px;
 }
 
 .about-text {
@@ -150,15 +253,10 @@ body {
     line-height: 1.86;
     letter-spacing: 0.02em;
     color: var(--fourth-text-color);
+    margin-bottom: 44px;
 }
 
 .about-btn {
-    font-family: inherit;
-    font-weight: 600;
-    font-size: 12px;
-    line-height: 1.33;
-    letter-spacing: 0.09em;
-    text-transform: uppercase;
     color: var(--second-button-color);
 }
 
@@ -166,25 +264,36 @@ body {
 
 .prices {
     background-color: var(--fourth-text-color);
+    padding: 130px 0;
 }
 
 .prices-pre-title {
-    font-weight: 600;
-    font-size: 11px;
-    line-height: 1.36;
-    letter-spacing: 0.1em;
-    text-transform: uppercase;
-
     color: var(--first-text-color);
 }
 
 .prices-title {
-    font-family: Raleway;
-    font-weight: 700;
-    font-size: 42px;
-    line-height: 1.17;
-    letter-spacing: 0.05em;
     color: var(--main-title-color);
+}
+
+.prices-wrap{
+    display: flex;
+    margin-bottom: 50px;
+}
+
+.prices-list{
+    border: 1px solid #ffffff;
+    width: 50%;
+    padding: 30px 40px;
+}
+
+.prices-item{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+
+.prices-item:last-child{
+    margin-bottom: 0;
 }
 
 .prices-item-text {
@@ -195,13 +304,9 @@ body {
 }
 
 .prices-btn {
-    font-family: inherit;
-    font-weight: 600;
-    font-size: 12px;
-    line-height: 1.33;
-    letter-spacing: 0.09em;
-    text-transform: uppercase;
     color: var(--first-button-color);
+    display: block;
+    margin: 0 auto;
 }
 
 /* -------------------REASONS---------------------- */
@@ -224,52 +329,54 @@ body {
 }
 
 .reasons-pre-title {
-    font-weight: 600;
-    font-size: 11px;
-    line-height: 1.36;
-    letter-spacing: 0.1em;
-    text-transform: uppercase;
-
     color: var(--third-text-color);
 }
 
 .reasons-title {
-    font-family: Raleway;
-    font-weight: 700;
-    font-size: 42px;
-    line-height: 1.17;
-    letter-spacing: 0.05em;
-
     color: var(--third-text-color);
 }
 
 .reasons-after-title {
-    font-size: 18px;
-    line-height: 1.67;
-    letter-spacing: 0.02em;
-
     color: var(--fourth-text-color);
 }
 
 /* -------------------MASTERS---------------------- */
+
+.masters{
+    padding: 130px 0;
+}
+
 .masters-pre-title {
-    font-weight: 600;
-    font-size: 11px;
-    line-height: 1.36;
-    letter-spacing: 0.1em;
-    text-transform: uppercase;
     color: var(--third-text-color);
 }
 
 .masters-title {
-    font-family: Raleway;
-    font-weight: 700;
-    font-size: 42px;
-    line-height: 1.17;
-    letter-spacing: 0.05em;
-
     color: var(--third-text-color);
 }
+
+.masters-list{
+    display: flex;
+    margin-right: -30px;
+    margin-bottom: -30px;
+}
+
+.masters-item{
+    flex-basis: calc(100% - 3 * 30px);
+    margin-right: 30px;
+    margin-bottom: 30px;
+}
+
+.masters-item-content{
+    padding-top: 30px;
+}
+
+/* .masters-item:nth-child(3n){
+    margin-right: 0;
+}
+
+.masters-item:nth-last-child(-n + 3){
+    margin-bottom: 0;
+} */
 
 .masters-item-title {
     font-weight: 400;
@@ -277,6 +384,7 @@ body {
     line-height: 1.39;
     text-align: center;
     letter-spacing: 0.02em;
+    margin-bottom: 8px;
     color: var(--second-title-color);
 }
 
@@ -291,13 +399,26 @@ body {
 
 /* -------------------GALLERY---------------------- */
 
+.gallery{
+    padding: 130px 0;
+}
+
 .gallery-pre-title {
-    font-weight: 600;
-    font-size: 11px;
-    line-height: 1.36;
-    letter-spacing: 0.1em;
-    text-transform: uppercase;
+    margin-bottom: 44px;
     color: var(--third-text-color);
+}
+
+.gallery-list{
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -30px;
+    margin-top: -30px;
+}
+
+.gallery-item{
+    width: calc(100% / 4 - 30px);
+    margin-left: 30px;
+    margin-top: 30px;
 }
 
 /* -------------------ONLINE---------------------- */
@@ -307,11 +428,6 @@ body {
 }
 
 .online-title {
-    font-family: Raleway;
-    font-weight: 700;
-    font-size: 42px;
-    line-height: 1.17;
-    letter-spacing: 0.05em;
     color: var(--main-title-color);
 }
 
@@ -322,11 +438,6 @@ body {
 }
 
 .contacts-title {
-    font-family: Raleway;
-    font-weight: 700;
-    font-size: 42px;
-    line-height: 1.17;
-    letter-spacing: 0.05em;
     color: var(--main-title-color);
 }
 
