--- a/css/style.css
+++ b/css/style.css
@@ -187,7 +187,14 @@ img{
     line-height: 1.33;
     letter-spacing: 0.1em;
     color: var(--header-text-color);
+    transition: color 300ms linear;
 }
+
+.header-tel:hover,
+.header-tel:focus{
+    color: var(--accent-color);
+}
+
 
 .header-btn {
     color: var(--first-button-color);
@@ -625,11 +632,76 @@ img{
 
 .online {
     background-color: var(--second-title-color);
+    padding-top: 130px;
+    padding-bottom: 130px;
+    width: calc(50% + 15px);
+    padding-right: 40px;
 }
 
 .online-title {
     color: var(--main-title-color);
+    margin-bottom: 44px;
 }
+
+.online-input-wrap {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 44px;
+}
+
+.online-input,
+.online-text {
+    width: 270px;
+    background-color: transparent;
+    border: none;
+    border-bottom: 1px solid rgba(157, 164, 189, 0.4);
+    padding-bottom: 8px;
+    font-weight: 600;
+    font-size: 11px;
+    line-height: 1.36;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
+    color: var(--first-text-color);
+    outline: none;
+    transition: border-color 300ms linear;
+}
+
+.online-input:focus,
+.online-text:focus {
+    border-color: #ffffff;
+}
+
+.online-input:focus::placeholder,
+.online-text:focus::placeholder {
+    color: #ffffff;
+}
+
+.online-text {
+    width: 100%;
+    height: 76px;
+    resize: none;
+    margin-bottom: 44px;
+}
+
+.online-input::placeholder,
+.online-text::placeholder {
+    font-weight: 600;
+    font-size: 11px;
+    line-height: 1.36;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
+    color: var(--first-text-color);
+    transition: color 300ms linear;
+}
+
+.online-input+.online-input {
+    width: 260px;
+}
+
+.online-btn {
+    color: var(--first-button-color);
+}
+
 
 /* -------------------CONTACTS---------------------- */
 
@@ -709,6 +781,16 @@ img{
     left: 50%;
     transform: scale(1) rotate(0) translate(-50%, -50%);
     transition: transform 300ms;
+    padding: 40px;
+}
+
+.modal-title {
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 1.3;
+    color: var(--second-title-color);
+    text-align: center;
+    margin-bottom: 15px;
 }
 
 .modal-close {
@@ -729,4 +811,118 @@ img{
     visibility: hidden;
     opacity: 0;
     pointer-events: none;
+}
+
+.modal-form-field {
+    margin-bottom: 10px;
+}
+
+.modal-input-wrap {
+    position: relative;
+}
+
+.modal-input {
+    width: 100%;
+    height: 45px;
+    border: 1px solid #999999;
+    border-radius: 4px;
+    outline: none;
+    padding-left: 25px;
+    padding-right: 25px;
+    background-color: transparent;
+    color: teal;
+    transition: border-color 300ms linear;
+}
+
+.modal-input:focus+.input-icon {
+    fill: var(--accent-color);
+}
+
+.modal-input:focus,
+.modal-text:focus {
+    border-color: var(--accent-color);
+}
+
+.input-icon {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 5px;
+    transition: fill 300ms linear;
+}
+
+.modal-text {
+    width: 100%;
+    height: 100px;
+    border: 1px solid #999999;
+    border-radius: 4px;
+    outline: none;
+    padding: 10px;
+    resize: none;
+    background-color: transparent;
+    color: teal;
+    transition: border-color 300ms linear;
+}
+
+.modal-input::placeholder,
+.modal-text::placeholder {
+    font-size: 14px;
+    color: tomato;
+    opacity: 0.7;
+}
+
+.modal-input-text {
+    font-size: 12px;
+    display: block;
+    margin-bottom: 5px;
+    color: var(--fourth-text-color);
+}
+
+.modal-btn {
+    margin: 0 auto;
+    color: var(--second-button-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.modal-btn:hover svg {
+    fill: #ffffff;
+}
+
+.input-btn-icon {
+    margin-left: 6px;
+    transition: fill 300ms linear;
+}
+
+.modal-check-text {
+    font-size: 14px;
+    color: var(--fourth-text-color);
+    display: flex;
+    position: relative;
+    align-items: center;
+}
+
+.modal-check-text span {
+    width: 16px;
+    height: 15px;
+    border: 2px solid #000000;
+    margin-right: 5px;
+    border-radius: 2px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.icon-check {
+    fill: transparent;
+}
+
+.modal-check:checked+.modal-check-text span {
+    background-color: var(--accent-color);
+    border: none;
+}
+
+.modal-check:checked+.modal-check-text .icon-check {
+    fill: teal;
 }
