--- a/css/style.css
+++ b/css/style.css
@@ -628,10 +628,16 @@ img{
     margin-top: 30px;
 }
 
+
+.contact-wrapp .container {
+    display: flex;
+    background-color: #191C26;
+}
+
 /* -------------------ONLINE---------------------- */
 
 .online {
-    background-color: var(--second-title-color);
+    background-color:#191C26;
     padding-top: 130px;
     padding-bottom: 130px;
     width: calc(50% + 15px);
@@ -706,11 +712,27 @@ img{
 /* -------------------CONTACTS---------------------- */
 
 .contacts {
-    background-color: var(--second-title-color);
+    background-image: url(../img/contacts-bg.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    padding-top: 130px;
+    padding-bottom: 130px;
+    width: calc(50% + 15px);
+    padding-left: 100px;
 }
 
 .contacts-title {
+    margin-bottom: 40px;
     color: var(--main-title-color);
+}
+
+.contacts-list{
+    max-width: 270px;
+}
+
+.contacts-item:nth-last-child(3){
+   margin-bottom: 20px; 
 }
 
 .contacts-link {
@@ -722,15 +744,17 @@ img{
 }
 
 .contacts-bottom-title {
+    margin-top: 70px;
     font-weight: 600;
     font-size: 11px;
     line-height: 1.36;
     letter-spacing: 0.1em;
     text-transform: uppercase;
-    color: #ffffff;
+    color: var(--main-title-color);
 }
 
 .contacts-bottom-text {
+    margin-top: 20px;
     font-size: 18px;
     line-height: 1.67;
     letter-spacing: 0.02em;
@@ -744,7 +768,6 @@ img{
     font-size: 11px;
     line-height: 1.36;
     letter-spacing: 0.2em;
-
     color: var(--second-text-color);
 }
 
@@ -753,7 +776,6 @@ img{
     font-size: 11px;
     line-height: 1.36;
     letter-spacing: 0.2em;
-
     color: var(--third-text-color);
 }
 
