--- a/sass/layout/_contact-wrap.scss
+++ b/sass/layout/_contact-wrap.scss
@@ -1,5 +1,5 @@
 .contact-wrapp {
-    background-color: var(--second-title-color);
+    // background-color: var(--second-title-color);
 
     .container {
         display: flex;
