--- a/sass/layout/_prices.scss
+++ b/sass/layout/_prices.scss
@@ -6,8 +6,8 @@
     background-position: center;
     padding-top: 130px;
     padding-bottom: 130px;
-    /* max-width: 1280px;
-    margin: 0 auto; */
+    max-width: 1280px;
+    margin: 0 auto;
 }
 
 .prices-pre-title {
