--- a/sass/components/_pre-title.scss
+++ b/sass/components/_pre-title.scss
@@ -2,7 +2,9 @@
     text-transform: uppercase;
     @include font(11px, 1.36, 0.1em, 600);
     @extend %align-list;
-
+    @media screen and (min-width: 768px) {
+        @include font(11px, 1.36, 0.1em, 600);
+    }
     &::before {
         content: "";
         width: 63px;
