--- a/sass/layout/_gallery.scss
+++ b/sass/layout/_gallery.scss
@@ -1,27 +1,42 @@
 .gallery {
-    padding-top: 130px;
-    padding-bottom: 130px;
+    padding-top: 84px;
+    padding-bottom: 84px;
+        @media screen and (min-width: 1200px) {
+            padding-top: 130px;
+            padding-bottom: 130px;
+        }
+}
+
+img {
+    width: 100%;
 }
 
 .gallery-pre-title {
     margin-bottom: 44px;
-
     &::before {
         color: var(--third-text-color);
     }
 }
 
 .gallery-list {
-    display: flex;
-    flex-wrap: wrap;
-    margin-left: -30px;
-    margin-top: -30px;
+    margin-bottom: -30px;
+        @media screen and (min-width: 768px) {
+            display: flex;
+            flex-wrap: wrap;
+            margin-left: -30px;
+        }
 }
 
 .gallery-item {
-    width: calc(100% / 4 - 30px);
-    margin-left: 30px;
-    margin-top: 30px;
+    margin-bottom: 30px;
+        @media screen and (min-width: 768px) {
+            width: calc(100% / 2 - 30px);
+            margin-left: 30px;
+        }
+    
+        @media screen and (min-width: 1200px) {
+            width: calc(100% / 4 - 30px);
+        }
 }
 
 .contact-wrapp .container {
