--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -3,23 +3,48 @@
     width: 100%;
     top: 0;
     left: 0;
-
-    padding-top: 32px;
-    padding-bottom: 32px;
-}
-
-.header-list {
-    display: flex;
-}
-
-.header-navigation {
-    display: flex;
-    align-items: center;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    @media screen and (min-width: 1200px){
+        padding-top: 32px;
+        padding-bottom: 32px;
+    }
 }
 
 .header-container {
     display: flex;
     align-items: center;
+    height: 78px;
+
+}
+
+.header-navigation {
+    display: flex;
+    align-items: center;
+    @media screen and (max-width: 768px) {
+        justify-content: space-between;
+        width: 100%;
+    }
+    @media screen and (max-width: 1200px){
+            align-items: flex-start;
+    }
+}
+
+.header-list {
+    display: none;
+    @media screen and (min-width: 768px) {
+        display: flex;
+    }
+}
+
+.header-item {
+    margin-right: 24px;
+    @media screen and (min-width: 1200px){
+        margin-right: 40px;
+    }
+    &:last-child {
+        margin-right: 0;
+    }
 }
 
 .header-link {
@@ -30,51 +55,253 @@
     color: var(--header-text-color);
     transition: color 300ms linear;
     position: relative;
-
     &:hover,
     &:focus {
         color: var(--accent-color);
     }
 
-    &.current::after {
-        content: "";
-        width: 100%;
-        height: 4px;
-        background-color: var(--accent-color);
-        border-radius: 10px;
-        position: absolute;
-        left: 0;
-        bottom: -48px;
-    }
+    // &.current::after {
+    //     content: "";
+    //     width: 100%;
+    //     height: 4px;
+    //     background-color: var(--accent-color);
+    //     border-radius: 10px;
+    //     position: absolute;
+    //     left: 0;
+    //     bottom: -48px;
+    // }
 }
 
 
 .header-connect {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
     margin-left: auto;
     padding-right: 10px;
-}
-
-.header-logo {
-    margin-right: 70px;
-}
-
-.header-item {
-    margin-right: 40px;
-
-    &:last-child {
-        margin-right: 0;
+    @media  screen and (min-width: 1200px) {
+        flex-direction: row-reverse;
+        align-items: baseline;
     }
 }
 
-.header-tel {
-    font-weight: 600;
-    font-size: 12px;
-    line-height: 1.33;
-    letter-spacing: 0.1em;
-    color: var(--header-text-color);
+.header-logo {
+    fill: #ffffff;
+    margin-left: 31px;
+        @media screen and (min-width: 768px) {
+            margin-right: 70px;
+            margin-left: 0;
+            fill: #303030;
+        }
+}
+
+.header-tel {   
+    display: none;
+        @media screen and (min-width: 768px) {
+            display: inline;
+            margin-right: 21px;
+            margin-top: 20px;
+            font-size: 12px;
+            line-height: 1.33;
+            letter-spacing: 0.1em;
+            color: var(--header-text-color);
+            transition: color 300ms linear;
+                &:hover,
+                &:focus {
+                    color: var(--accent-color);
+                }
+        }
 }
 
 .header-btn {
-    color: var(--first-button-color);
-    margin-left: 40px;
+     display: none;
+        @media screen and (min-width: 768px) {
+                display: inline;
+                color: var(--first-button-color);
+                margin-left: 40px;
+            }
+}
+
+.open-menu-btn {
+    width: 40px;
+    height: 40px;
+    background-color: transparent;
+    border: none;
+    @media screen and (min-width: 767px) {
+        display: none;
+    }
+}
+
+.menu-burger{
+    fill: #fff;
+        &:hover,
+        &:focus {
+            fill: var(--accent-color);
+            transition: fill 300ms cubic-bezier(0.4, 0, 0.2, 1);
+        }
+}
+
+.mob-menu {
+    position: fixed;
+    background-color: #ffffff;
+    width: 337px;
+    height: 100vh;
+    top: 0;
+    right: 0;
+    z-index: 5;
+    padding-top: 48px;
+    padding-bottom: 48px;
+    transform: scale(1);
+    transition: transform 300ms cubic-bezier(0.4, 0, 0.2, 1);
+    .container {
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+        padding-left: 40px;
+    }
+        &.is-hidden {
+            opacity: 0;
+            visibility: hidden;
+            pointer-events: none;
+            transform: scale(0.5);
+            transition: transform 300ms cubic-bezier(0.4, 0, 0.2, 1);;
+          }
+}
+
+.mob-menu-top{
+    display: flex;
+    flex-direction: column;
+    &:first-child{
+        justify-content: flex-end;
+    }
+}
+
+.mob-menu-bottom {
+    margin-top: auto;
+}
+
+.close-menu-btn {
+    display: block;
+    margin-bottom: 30px;
+    background-color: transparent;
+    border: none;
+    width: 100%;
+}
+
+.menu-close{
+    &:hover,
+    &:focus {
+        fill: var(--accent-color);
+        transition: fill 300ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+}
+
+
+.mob-menu-item {
+    &:not(:last-child) {
+        margin-bottom: 24px;
+    }
+}
+
+.mob-menu-link {
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 25px;
+    text-align: center;
+    letter-spacing: 0.1em;
+    color: #303030;
+        &:hover,
+        &:focus {
+            color: var(--accent-color);
+        }
+}
+
+.mob-menu-tel {
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 25px;
+    letter-spacing: 0.1em;
+    color: #303030;
+    display: block;
+    margin-bottom: 24px;
+        &:hover,
+        &:focus {
+            color: var(--accent-color);
+        }
+}
+
+.mob-menu-connect {
+    margin-bottom: 64px;
+}
+
+.pre-link {
+    @include font(11px, 1.36, 0.1em, 600);
+    @extend %align-list;
+    &::before {
+        content: "";
+        width: 63px;
+        height: 1px;
+        margin-right: 21px;
+        background-color: #303030;
+    }
+}
+
+.second{
+    margin-left: 82px;
+}
+
+.mob-social-list{
+    display: flex;
+    flex-direction: column;
+}
+
+.mob-social-item {
+    &:not(:last-child) {
+        margin-bottom: 24px;
+    }
+    
+    .mob-social-link {
+        font-weight: 600;
+        font-size: 14px;
+        line-height: 19px;
+        letter-spacing: 0.2em;
+        color: #303030;
+            &:hover,
+            &:focus {
+                color: var(--accent-color);
+            }
+    }
+}
+
+.btn-up {
+    position: fixed;
+    background-color: #303030;
+    right: 20%;
+    bottom: 5px;
+    border-radius: 50%;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 60px;
+    height: 60px;
+}
+
+.btn-up::before {
+    content: "";
+    width: 40px;
+    height: 40px;
+    background: transparent no-repeat center center;
+    background-size: 100% 100%;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='%23fff' viewBox='0 0 16 16'%3E%3Cpath fill-rule='evenodd' d='M7.646 4.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 5.707l-5.646 5.647a.5.5 0 0 1-.708-.708l6-6z'/%3E%3C/svg%3E");
+}
+
+.btn-up_hide {
+    display: none;
+}
+
+@media (hover: hover) and (pointer: fine) {
+    .btn-up:hover {
+        background-color: #000;
+    }
 }
