--- a/css/main.css
+++ b/css/main.css
@@ -492,7 +492,7 @@ body {
   width: 337px;
   height: 100vh;
   top: 0;
-  right: 0;
+  right: 300px;
   z-index: 5;
   padding-top: 48px;
   padding-bottom: 48px;
@@ -512,6 +512,11 @@ body {
   transform: scale(0.5);
   transition: transform 300ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+@media screen and (min-width: 768px) {
+  .mob-menu {
+    display: none;
+  }
+}
 
 .mob-menu-top {
   display: flex;
@@ -522,7 +527,7 @@ body {
 }
 
 .mob-menu-bottom {
-  margin-top: auto;
+  margin-top: 64px;
 }
 
 .close-menu-btn {
@@ -530,7 +535,6 @@ body {
   margin-bottom: 30px;
   background-color: transparent;
   border: none;
-  width: 100%;
 }
 
 .menu-close:hover, .menu-close:focus {
@@ -620,6 +624,11 @@ body {
   justify-content: center;
   width: 60px;
   height: 60px;
+}
+@media screen and (max-width: 1200px) {
+  .btn-up {
+    margin: 0 auto;
+  }
 }
 
 .btn-up::before {
