--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -147,7 +147,7 @@
     width: 337px;
     height: 100vh;
     top: 0;
-    right: 0;
+    right: 300px;
     z-index: 5;
     padding-top: 48px;
     padding-bottom: 48px;
@@ -166,6 +166,9 @@
             transform: scale(0.5);
             transition: transform 300ms cubic-bezier(0.4, 0, 0.2, 1);;
           }
+    @media screen and (min-width: 768px) {
+        display: none;
+    }      
 }
 
 .mob-menu-top{
@@ -177,7 +180,7 @@
 }
 
 .mob-menu-bottom {
-    margin-top: auto;
+    margin-top: 64px;
 }
 
 .close-menu-btn {
@@ -185,7 +188,6 @@
     margin-bottom: 30px;
     background-color: transparent;
     border: none;
-    width: 100%;
 }
 
 .menu-close{
@@ -285,6 +287,9 @@
     justify-content: center;
     width: 60px;
     height: 60px;
+    @media screen and (max-width: 1200px) {
+        margin: 0 auto;
+    }
 }
 
 .btn-up::before {
