--- a/css/main.css
+++ b/css/main.css
@@ -169,8 +169,8 @@ body {
 }
 
 .modal {
-  width: 500px;
-  min-height: 500px;
+  width: 320px;
+  min-height: 300px;
   background-color: #ffffff;
   border-radius: 5px;
   position: absolute;
@@ -178,6 +178,12 @@ body {
   left: 50%;
   transform: scale(1) rotate(0) translate(-50%, -50%);
   transition: transform 300ms;
+}
+@media screen and (min-width: 768px) {
+  .modal {
+    width: 500px;
+    min-height: 500px;
+  }
 }
 
 .modal-close {
@@ -615,8 +621,8 @@ body {
 .btn-up {
   position: fixed;
   background-color: #303030;
-  right: 20%;
-  bottom: 25px;
+  right: 35%;
+  bottom: 30px;
   border-radius: 50%;
   cursor: pointer;
   display: flex;
@@ -624,11 +630,6 @@ body {
   justify-content: center;
   width: 60px;
   height: 60px;
-}
-@media screen and (max-width: 1200px) {
-  .btn-up {
-    justify-content: center;
-  }
 }
 
 .btn-up::before {
@@ -758,8 +759,20 @@ body {
 }
 
 .about {
-  padding-top: 139px;
-  padding-bottom: 121px;
+  padding-top: 84px;
+  padding-bottom: 84px;
+}
+@media screen and (min-width: 768px) {
+  .about {
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .about {
+    padding-top: 139px;
+    padding-bottom: 121px;
+  }
 }
 
 .about-container {
@@ -840,15 +853,31 @@ body {
 }
 
 .prices {
+  padding-top: 84px;
+  padding-bottom: 84px;
+  max-width: 480px;
+  background-image: url(../img/prices-bg-mob.png);
   background-color: #111319;
-  background-image: url(../img/prices-bg.png);
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
-  padding-top: 130px;
-  padding-bottom: 130px;
-  max-width: 1280px;
   margin: 0 auto;
+}
+@media screen and (min-width: 768px) {
+  .prices {
+    padding-top: 100px;
+    padding-bottom: 100px;
+    max-width: 768px;
+    background-image: url(../img/prices-bg-tab.png);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .prices {
+    padding-top: 130px;
+    padding-bottom: 130px;
+    max-width: 1280px;
+    background-image: url(../img/prices-bg.png);
+  }
 }
 
 .prices-pre-title {
@@ -867,12 +896,29 @@ body {
 
 .prices-wrap {
   display: flex;
+  flex-direction: column;
   margin-bottom: 50px;
+}
+@media screen and (min-width: 1200px) {
+  .prices-wrap {
+    flex-direction: row;
+  }
 }
 
 .prices-list {
-  width: 50%;
-  padding: 30px 40px;
+  width: 418px;
+  padding: 30px 30px;
+}
+@media screen and (min-width: 768px) {
+  .prices-list {
+    width: 690px;
+    padding: 30px 40px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .prices-list {
+    width: 50%;
+  }
 }
 
 .prices-list-light {
@@ -880,7 +926,12 @@ body {
 }
 
 .prices-list-dark {
-  background: linear-gradient(180deg, #090b13 0%, rgba(9, 11, 19, 0.2) 100%);
+  background: linear-gradient(360deg, #171a24 0%, rgba(23, 26, 36, 0.2) 100%);
+}
+@media screen and (min-width: 1200px) {
+  .prices-list-dark {
+    background: linear-gradient(180deg, #090b13 0%, rgba(9, 11, 19, 0.2) 100%);
+  }
 }
 
 .prices-item {
@@ -908,10 +959,15 @@ body {
 }
 
 .prices-item-text {
-  font-size: 18px;
+  font-size: 14px;
   line-height: 1.67;
   letter-spacing: 0.02em;
   color: var(--second-text-color);
+}
+@media screen and (min-width: 768px) {
+  .prices-item-text {
+    font-size: 18px;
+  }
 }
 
 .prices-btn {
@@ -926,6 +982,12 @@ body {
 
 .reasons-container {
   display: flex;
+  flex-direction: column-reverse;
+}
+@media screen and (min-width: 1200px) {
+  .reasons-container {
+    flex-direction: row;
+  }
 }
 
 .reasons-left {
@@ -954,9 +1016,32 @@ body {
   margin-top: 30px;
 }
 
-.reasons-left,
+.reasons-left {
+  width: 418px;
+}
+@media screen and (min-width: 768px) {
+  .reasons-left {
+    margin-left: auto;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .reasons-left {
+    width: calc(50% - 30px);
+  }
+}
+
 .reasons-right {
-  width: calc(50% - 30px);
+  width: 418px;
+}
+@media screen and (min-width: 768px) {
+  .reasons-right {
+    margin-right: auto;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .reasons-right {
+    width: calc(50% - 30px);
+  }
 }
 
 .reasons-count {
@@ -1002,7 +1087,13 @@ body {
 }
 
 .reasons-after-title {
+  margin-bottom: 44px;
   color: var(--fourth-text-color);
+}
+@media screen and (min-width: 1200px) {
+  .reasons-after-title {
+    margin-bottom: 0;
+  }
 }
 
 .masters {
