--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -6,7 +6,6 @@
     top: 0;
     left: 0;
     transition: opacity 300ms, visibility 300ms;
-
     &.is-hidden .modal {
         transform: scale(1.5) rotate(270deg) translate(100px, 100px);
     }
@@ -14,8 +13,8 @@
 
 
 .modal {
-    width: 500px;
-    min-height: 500px;
+    width: 320px;
+    min-height: 300px;
     background-color: #ffffff;
     border-radius: 5px;
     position: absolute;
@@ -23,6 +22,11 @@
     left: 50%;
     transform: scale(1) rotate(0) translate(-50%, -50%);
     transition: transform 300ms;
+    @media  screen and (min-width: 768px) {
+        width: 500px;
+        min-height: 500px;
+    }
+
 }
 
 .modal-close {
