--- a/sass/layout/_about.scss
+++ b/sass/layout/_about.scss
@@ -1,6 +1,14 @@
 .about {
-    padding-top: 139px;
-    padding-bottom: 121px;
+    padding-top: 84px;
+    padding-bottom: 84px;
+    @media screen and (min-width: 768px) {
+        padding-top: 100px;
+        padding-bottom: 100px;
+    }
+    @media screen and (min-width: 1200px) {
+        padding-top: 139px;
+        padding-bottom: 121px;
+    }
 }
 
 .about-container {
