--- a/sass/layout/_contacts.scss
+++ b/sass/layout/_contacts.scss
@@ -1,24 +1,43 @@
 .contacts {
-    background-image: url(../img/contacts-bg.png);
+    padding: 84px 0;
+    width: 100%;
+    background-color: #191C26;
+    background-image: url(../img/contacts-bg-mob.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    padding-top: 130px;
-    padding-bottom: 130px;
-    width: calc(50% + 15px);
-    padding-left: 100px;
+    @media screen and (min-width: 1200px) {
+        padding-top: 130px;
+        padding-bottom: 130px;
+        width: calc(50% + 15px);
+        padding-left: 100px;
+        background-image: url(../img/contacts-bg.png);
+    }
+}
+
+.contact-wrap{
+    @media screen and (min-width: 768px) {
+        display: flex;
+    }
+    @media screen and (min-width: 1200px) {
+        display: block;
+    }
 }
 
 .contacts-title {
+    margin-left: 25%;
     margin-bottom: 40px;
     color: var(--main-title-color);
+    @media screen and (min-width: 768px) {
+        margin-left: 39px;
+    }
 }
 
 .contacts-list {
-    max-width: 270px;
+    margin: 42px 31px;
 }
 
-.contacts-item:nth-last-child(3) {
+.contacts-item {
     margin-bottom: 20px;
 }
 
@@ -36,7 +55,8 @@
 }
 
 .contacts-bottom-title {
-    margin-top: 70px;
+    margin-bottom: 20px;
+    margin-left: 31px;
     font-weight: 600;
     font-size: 11px;
     line-height: 1.36;
@@ -46,13 +66,29 @@
 }
 
 .contacts-bottom-text {
+    display: block;
+    margin-left: 31px;
     font-size: 18px;
     line-height: 1.67;
     letter-spacing: 0.02em;
     color: var(--second-text-color);
 }
 
+.address-wrap{
+    @media screen and (min-width: 768px) {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    @media screen and (min-width: 1200px) {
+        display: block;
+    }
+}
+
 .adress-text{
     display: block;
-    max-width: 230px;
+    @media screen and (min-width: 1200px) {
+        max-width: 230px;
+    }
+    
 }
