--- a/sass/layout/_masters.scss
+++ b/sass/layout/_masters.scss
@@ -1,11 +1,23 @@
 .masters {
-    padding-top: 130px;
-    padding-bottom: 130px;
+    padding: 42px 0;
+    @media screen and (min-width: 768px) {
+        padding: 50px 0;
+    }
+    @media screen and (min-width: 1200px) {
+        padding-top: 130px;
+        padding-bottom: 130px;
+    }
 }
 
 .masters-container {
-    padding: 130px 55px;
+    padding: 84px 31px;
     background-color: var(--alt-background-color);
+    @media screen and (min-width: 768px) {
+        padding: 100px 159px;
+    }
+    @media screen and (min-width: 1200px) {
+        padding: 130px 55px;
+    }
 }
 
 .masters-pre-title {
@@ -22,8 +34,12 @@
 
 .masters-list {
     display: flex;
+    flex-direction: column;
     margin-right: -30px;
     margin-bottom: -30px;
+    @media screen and (min-width: 1200px) {
+        flex-direction: row;
+    }
 }
 
 .masters-item {
