--- a/sass/layout/_online.scss
+++ b/sass/layout/_online.scss
@@ -12,8 +12,6 @@
         padding-top: 130px;
         padding-bottom: 130px;
         width: calc(50% + 15px);
-        padding-right: 40px;
-        margin-left: 55px;
     }
 }
 
@@ -96,12 +94,11 @@
 .online-btn {
     margin-left: 25%;
     color: var(--first-button-color);
+    @media screen and (min-width: 768px) {
+        margin-left: 0;
+    }
 }
 
 .contact-wrapp .container {
     display: flex;
-    // flex-direction: column;
-    // @media screen and (min-width: 1200px) {
-    // flex-direction: row;
-    // }
 }
