add bg 2x, favicon

--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -61,7 +61,7 @@
     background-color: var(--fourth-text-color);
     background-image: linear-gradient(rgba(25, 28, 38, 0.2),
             rgba(25, 28, 38, 0.2)),
-        url(../img/mobile-slider-img-3.jpg);
+        url(../../img/mobile-slider-img-3.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
