--- a/sass/layout/_online.scss
+++ b/sass/layout/_online.scss
@@ -19,7 +19,7 @@
 }
 
 .online-title {
-    margin-left: 10%;
+    text-align: center;
     color: var(--main-title-color);
     margin-bottom: 44px;
 }
