--- a/css/main.css
+++ b/css/main.css
@@ -703,7 +703,7 @@ body {
 
 .hero-right {
   background-color: var(--fourth-text-color);
-  background-image: linear-gradient(rgba(25, 28, 38, 0.2), rgba(25, 28, 38, 0.2)), url(../img/mobile-slider-img-3.jpg);
+  background-image: linear-gradient(rgba(25, 28, 38, 0.2), rgba(25, 28, 38, 0.2)), url(../../img/mobile-slider-img-3.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -875,19 +875,29 @@ body {
   padding-top: 84px;
   padding-bottom: 84px;
   max-width: 480px;
-  background-image: url(../img/prices-bg-mob.png);
+  background-image: url(../../img/prices-bg-mob.png);
   background-color: #111319;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   margin: 0 auto;
 }
+@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .prices {
+    background-image: url(../../img/prices-bg-mob-2x.png);
+  }
+}
 @media screen and (min-width: 768px) {
   .prices {
     padding-top: 100px;
     padding-bottom: 100px;
     max-width: 768px;
-    background-image: url(../img/prices-bg-tab.png);
+    background-image: url(../../img/prices-bg-tab.png);
+  }
+}
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .prices {
+    background-image: url(../../img/prices-bg-tab-2x.png);
   }
 }
 @media screen and (min-width: 1200px) {
@@ -895,7 +905,12 @@ body {
     padding-top: 130px;
     padding-bottom: 130px;
     max-width: 1280px;
-    background-image: url(../img/prices-bg.png);
+    background-image: url(../../img/prices-bg.png);
+  }
+}
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  .prices {
+    background-image: url(../../img/prices-bg-2x.png);
   }
 }
 
@@ -1331,7 +1346,7 @@ img {
 }
 
 .online-title {
-  margin-left: 10%;
+  text-align: center;
   color: var(--main-title-color);
   margin-bottom: 44px;
 }
@@ -1448,13 +1463,34 @@ img {
   background-size: cover;
   background-position: center;
 }
+@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .contacts {
+    background-image: url(../../img/contacts-bg-mob-2x.png);
+  }
+}
+@media screen and (min-width: 768px) {
+  .contacts {
+    padding: 100px 0;
+    background-image: url(../../img/contacts-bg-tab.png);
+  }
+}
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .contacts {
+    background-image: url(../../img/contacts-bg-tab-2x.png);
+  }
+}
 @media screen and (min-width: 1200px) {
   .contacts {
     padding-top: 130px;
     padding-bottom: 130px;
     width: calc(50% + 15px);
     padding-left: 100px;
-    background-image: url(../img/contacts-bg.png);
+    background-image: url(../../img/contacts-bg.png);
+  }
+}
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  .contacts {
+    background-image: url(../../img/contacts-bg-2x.png);
   }
 }
 
@@ -1470,7 +1506,7 @@ img {
 }
 
 .contacts-title {
-  margin-left: 25%;
+  text-align: center;
   margin-bottom: 40px;
   color: var(--main-title-color);
 }
