--- a/sass/layout/_contacts.scss
+++ b/sass/layout/_contacts.scss
@@ -6,12 +6,32 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+        @media (min-device-pixel-ratio: 2),
+            (min-resolution: 192dpi),
+            (min-resolution: 2dppx) {
+                background-image: url(../../img/contacts-bg-mob-2x.png)
+            }
+    @media screen and (min-width: 768px){
+        padding: 100px 0;
+        background-image: url(../../img/contacts-bg-tab.png);
+        @media (min-device-pixel-ratio: 2),
+            (min-resolution: 192dpi),
+            (min-resolution: 2dppx) {
+                background-image: url(../../img/contacts-bg-tab-2x.png);
+            }        
+    }
+            
     @media screen and (min-width: 1200px) {
         padding-top: 130px;
         padding-bottom: 130px;
         width: calc(50% + 15px);
         padding-left: 100px;
-        background-image: url(../img/contacts-bg.png);
+        background-image: url(../../img/contacts-bg.png);
+        @media (min-device-pixel-ratio: 2),
+            (min-resolution: 192dpi),
+            (min-resolution: 2dppx) {
+                background-image: url(../../img/contacts-bg-2x.png); 
+            }
     }
 }
 
@@ -25,7 +45,7 @@
 }
 
 .contacts-title {
-    margin-left: 25%;
+    text-align: center;
     margin-bottom: 40px;
     color: var(--main-title-color);
     @media screen and (min-width: 768px) {
